@@ -1,3 +1,10 @@
+Thu May 19 22:00:11 2016  Kazuki Yamaguchi  <k@rhe.jp>
+
+	* ext/openssl/extconf.rb: check the existence of SSL_CTX_clear_options()
+	  macro.
+
+	* ext/openssl/openssl_missing.h: implement SSL_CTX_clear_options().
+
 Thu May 19 20:47:26 2016  Kazuki Yamaguchi  <k@rhe.jp>
 
 	* ext/openssl/ossl_cipher.c (ossl_get_gcm_auth_tag): no need to
